--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,25 @@
 name: cough_public
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - asttokens=2.4.1=pyhd8ed1ab_0
   - blas=1.0=mkl
-  - bottleneck=1.3.5=py39h080aedc_0
+  - bottleneck=1.3.7=py310h9128911_0
   - brotli=1.0.9=h2bbff1b_7
   - brotli-bin=1.0.9=h2bbff1b_7
-  - ca-certificates=2023.01.10=haa95532_0
-  - certifi=2022.12.7=py39haa95532_0
-  - contourpy=1.0.5=py39h59b6b97_0
+  - brotli-python=1.0.9=py310hd77b12b_7
+  - bzip2=1.0.8=h2bbff1b_5
+  - ca-certificates=2024.2.2=h56e8100_0
+  - certifi=2024.2.2=pyhd8ed1ab_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - debugpy=1.6.7=py310hd77b12b_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - executing=2.0.1=pyhd8ed1ab_0
   - fftw=3.3.9=h2bbff1b_1
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=ha860e81_0
@@ -18,9 +28,17 @@ dependencies:
   - gstreamer=1.18.5=hd78058f_0
   - icc_rt=2022.1.0=h6049295_2
   - icu=58.2=ha925a31_3
+  - idna=3.4=py310haa95532_0
+  - importlib-metadata=7.1.0=pyha770c72_0
+  - importlib_metadata=7.1.0=hd8ed1ab_0
   - intel-openmp=2021.4.0=haa95532_3556
+  - ipykernel=6.29.3=pyha63f2e9_0
+  - ipython=8.22.2=pyh7428d3b_0
+  - jedi=0.19.1=pyhd8ed1ab_0
   - jpeg=9e=h2bbff1b_0
-  - kiwisolver=1.4.4=py39hd77b12b_0
+  - jupyter_client=8.6.1=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py310h5588dad_0
+  - kiwisolver=1.4.4=py310hd77b12b_0
   - lerc=3.0=hd77b12b_0
   - libbrotlicommon=1.0.9=h2bbff1b_7
   - libbrotlidec=1.0.9=h2bbff1b_7
@@ -31,6 +49,7 @@ dependencies:
   - libiconv=1.16=h2bbff1b_2
   - libogg=1.3.5=h2bbff1b_1
   - libpng=1.6.37=h2a8f88b_0
+  - libsodium=1.0.18=h8d14728_1
   - libtiff=4.5.0=h8a3f274_0
   - libvorbis=1.3.7=he774522_0
   - libwebp=1.2.4=h2bbff1b_0
@@ -38,46 +57,73 @@ dependencies:
   - libxml2=2.9.14=h0ad7f3c_0
   - libxslt=1.1.35=h2bbff1b_0
   - lz4-c=1.9.4=h2bbff1b_0
-  - matplotlib=3.6.2=py39haa95532_0
-  - matplotlib-base=3.6.2=py39h1094b8e_0
+  - matplotlib-base=3.5.3=py310h7329aa0_2
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - mkl=2021.4.0=haa95532_640
-  - mkl-service=2.4.0=py39h2bbff1b_0
-  - mkl_fft=1.3.1=py39h277e83a_0
-  - mkl_random=1.2.2=py39hf11a4ad_0
+  - mkl-service=2.4.0=py310h2bbff1b_0
+  - mkl_fft=1.3.1=py310ha0764ea_0
+  - mkl_random=1.2.2=py310h4ed8f06_0
   - munkres=1.1.4=py_0
-  - numexpr=2.8.4=py39h5b0cc5e_0
-  - numpy=1.23.5=py39h3b20f71_0
-  - numpy-base=1.23.5=py39h4da318b_0
-  - openssl=1.1.1s=h2bbff1b_0
-  - packaging=22.0=py39haa95532_0
-  - pandas=1.5.2=py39hf11a4ad_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - numexpr=2.8.4=py310hd213c9f_0
+  - numpy=1.24.3=py310hdc03b94_0
+  - numpy-base=1.24.3=py310h3caf3d7_0
+  - openssl=1.1.1w=h2bbff1b_0
+  - packaging=23.2=py310haa95532_0
+  - pandas=1.5.3=py310h4ed8f06_0
+  - parso=0.8.4=pyhd8ed1ab_0
   - pcre=8.45=hd77b12b_0
-  - pillow=9.3.0=py39hdc2b20a_1
-  - pip=22.3.1=py39haa95532_0
-  - ply=3.11=py39haa95532_0
-  - pyparsing=3.0.9=py39haa95532_0
-  - pyqt=5.15.7=py39hd77b12b_0
-  - pyqt5-sip=12.11.0=py39hd77b12b_0
-  - python=3.9.7=h6244533_1
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.4.0=py310hd77b12b_0
+  - pip=23.3.1=py310haa95532_0
+  - platformdirs=3.10.0=py310haa95532_0
+  - ply=3.11=py310haa95532_0
+  - pooch=1.7.0=py310haa95532_0
+  - prompt-toolkit=3.0.42=pyha770c72_0
+  - psutil=5.9.0=py310h2bbff1b_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pygments=2.17.2=pyhd8ed1ab_0
+  - pyparsing=3.0.9=py310haa95532_0
+  - pyqt=5.15.10=py310hd77b12b_0
+  - pyqt5-sip=12.13.0=py310h2bbff1b_0
+  - pysocks=1.7.1=py310haa95532_0
+  - python=3.10.9=h966fe2a_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytz=2022.7=py39haa95532_0
+  - python_abi=3.10=2_cp310
+  - pytz=2024.1=py310haa95532_0
+  - pywin32=305=py310h2bbff1b_0
+  - pyzmq=25.1.2=py310hd77b12b_0
   - qt-main=5.15.2=he8e5bd7_7
   - qt-webengine=5.15.9=hb9a9bb5_5
   - qtwebkit=5.212=h3ad3cdb_4
-  - scipy=1.9.3=py39he11b74f_0
-  - setuptools=65.6.3=py39haa95532_0
-  - sip=6.6.2=py39hd77b12b_0
+  - requests=2.31.0=py310haa95532_1
+  - scipy=1.10.1=py310hb9afe5d_0
+  - setuptools=68.2.2=py310haa95532_0
+  - sip=6.7.12=py310hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.40.1=h2bbff1b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - tk=8.6.12=h2bbff1b_0
   - toml=0.10.2=pyhd3eb1b0_0
-  - tornado=6.2=py39h2bbff1b_0
+  - tomli=2.0.1=py310haa95532_0
+  - tornado=6.3.3=py310h2bbff1b_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.11.0=pyha770c72_0
   - tzdata=2022g=h04d1e81_0
+  - urllib3=2.1.0=py310haa95532_1
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd3eb1b0_0
-  - wincertstore=0.2=py39haa95532_2
+  - win_inet_pton=1.1.0=py310haa95532_0
   - xz=5.2.10=h8cc25b3_1
+  - zeromq=4.3.5=hd77b12b_0
+  - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.2=h19a0ad4_0
+  - pip:
+    - contourpy==1.2.1
+    - matplotlib==3.8.4
+    - nptyping==2.5.0
+    - timescoring==0.0.5
 prefix: C:\tools\Anaconda3\envs\cough_public
